Bug 378951 - regression: can no longer use touchscreen with kwin_x11
Summary: regression: can no longer use touchscreen with kwin_x11
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: platform-x11-standalone (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D5520
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-19 10:37 UTC by Martin Koller
Modified: 2017-04-22 06:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:
mgraesslin: Wayland-
mgraesslin: X11+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2017-04-19 10:37:16 UTC
Using kwin_x11 5.9.90, Qt 5.8.0, KF5 17.07.70 on openSuse Tumbleweed on an Asus Laptop which has a Touchscreen, I can no longer use any touch input (e.g. move a window or simply tap on the start menu button or in the taskmanager).
This worked in some older version (probably KDE4 times, don't know for sure)
and it also works with another window manager. E.g. starting icewm --replace in the same plasma5 session makes touch input work again.
Comment 1 Martin Flöser 2017-04-19 14:23:13 UTC
As there is no 5.9.90 yet I need to know which exact git hash was used for the package.
Comment 2 Martin Koller 2017-04-19 14:36:50 UTC
The rpm says:
Version     : 5.9.90git~20170417T040509~4a5734c

HTH
Comment 3 Martin Flöser 2017-04-20 05:14:23 UTC
Possible fix at https://phabricator.kde.org/D5520
Comment 4 Thomas Lübking 2017-04-20 06:42:46 UTC
This sounds as if the touch device (driver) fakes a pointer and this fails when the touch device is passively grabbed?

xinput
lspci
lsusb
Comment 5 Martin Flöser 2017-04-20 15:04:34 UTC
Git commit a5735e19b99d21d843252dcb12a147d122760371 by Martin Gräßlin.
Committed on 20/04/2017 at 15:03.
Pushed by graesslin into branch 'master'.

[platforms/x11] Do not grab touch events

Summary:
Grabbing the touch events seems to cause issues. It seems to also grab
pointer events from touchpad and breaks touch input on other events.

Also testing shows that we don't need it and get touch ownership events
for our screenedge windows reported.

Test Plan: Triggered touch screen edge, normal system usage on X11

Reviewers: #plasma, #kwin

Subscribers: plasma-devel, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D5520

M  +0    -18   plugins/platforms/x11/standalone/xinputintegration.cpp

https://commits.kde.org/kwin/a5735e19b99d21d843252dcb12a147d122760371
Comment 6 Martin Flöser 2017-04-20 17:48:52 UTC
nope, it's not yet sufficient. The screenedges still block events.
Comment 7 Martin Flöser 2017-04-20 18:13:22 UTC
Next try: https://phabricator.kde.org/D5528
Comment 8 Martin Flöser 2017-04-22 06:24:20 UTC
Git commit eec6afe6f5fef80f519c7afb33e4fd568d74aab0 by Martin Gräßlin.
Committed on 22/04/2017 at 06:17.
Pushed by graesslin into branch 'master'.

Don't map screenedge approach window if edge is only used for touch

Summary:
Another regression from enabling touch support on X11.
The approach window for pointer input gets unmapped as soon as the mouse
enters the window. This ensures that mouse motion events are not stolen
from other applications. But with the touch events we did not even react
on the enter event if it's not activated for pointer. The result was an
area around the screenedge being blocked for pointer input.

This change only creates and maps the approach window if the edge is
activated for pointer input.

Test Plan:
Activated edges through pointer and touch, reconfigured and tested
motion events

Reviewers: #kwin, #plasma

Subscribers: plasma-devel, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D5528

M  +15   -1    plugins/platforms/x11/standalone/edge.cpp

https://commits.kde.org/kwin/eec6afe6f5fef80f519c7afb33e4fd568d74aab0